<resources>
    <string name="app_name">Inter Web</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="nav_header_title">The Anonymous School</string>
    <string name="nav_header_subtitle">anonymous@school.edu</string>
    <string name="activity_new_event">Add New Event</string>
    <string name="activity_detail_event">Event Details</string>
    <string name="activity_new_participant">New Participant</string>
    <string name="activity_add_participant">Add Participant</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="event_detail_heading">Event Details</string>
    <string name="participant_detail_heading">Participants Details</string>
    <string name="title_placeholder">Event Name</string>
    <string name="date_placeholder">Event Date</string>
    <string name="venue_placeholder">Event Venue</string>
    <string name="participant_placeholder">Participant</string>
    <string name="contact_placeholder">Contact</string>
    <string name="institute_placeholder">Institute</string>
    <string name="participant_button">ADD PARTICIPANTS</string>
    <string name="submit_button">SUBMIT</string>
    <string name="event_menu">Events</string>
    <string name="gallery_menu">Gallery</string>
    <string name="participant_menu">Participants</string>
    <string name="winners_menu">Winners</string>
    <string name="celebrate_group">Celebrate</string>
    <string name="share_menu">Share</string>
    <string name="broadcast_menu">Broadcast</string>
    <string name="event_image_content_description">Event Image</string>

    <string name="google_maps_API_KEY">AIzaSyDNE1gQmXqkidOFwWU1WglqJMvDYvDmGZU</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="past_events">Past Events</string>
    <string name="favorite_events">Favorite Events</string>
</resources>
